[gd_scene load_steps=5 format=3 uid="uid://bai3s8ofuxrkt"]

[ext_resource type="Script" path="res://game_scene/game_scene.gd" id="1_76t2y"]
[ext_resource type="Resource" uid="uid://bpkgs08a3fn5x" path="res://map/map1.tres" id="2_t58do"]
[ext_resource type="PackedScene" uid="uid://dw144hyjpwn6b" path="res://ui/outcome.tscn" id="5_d1f8y"]
[ext_resource type="PackedScene" uid="uid://c364ant4pfapu" path="res://ui/to_start.tscn" id="6_5vlps"]

[node name="GameScene" type="Node"]
script = ExtResource("1_76t2y")
map_resource = ExtResource("2_t58do")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="UI" type="CanvasLayer" parent="."]
layer = 15

[node name="Outcome" parent="UI" instance=ExtResource("5_d1f8y")]
unique_name_in_owner = true

[node name="ToStart" parent="UI" instance=ExtResource("6_5vlps")]
unique_name_in_owner = true
visible = false

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="BackGround" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = -128

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport/BackGround"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.168627, 0.258824, 1)

[node name="Playground" type="Polygon2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
z_index = -2
color = Color(0.262745, 0.262745, 0.415686, 1)
polygon = PackedVector2Array(0, 0, 256, 0, 256, 256, 0, 256)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="to_started" from="UI/ToStart" to="." method="_on_to_start_to_started"]
